# finance-bot

./: .gitignore  pyproject.toml
agents/: budget_agent.py  coach_agent.py  intent.py  purchase_agent.py  spending_agent.py
api/: chat.py  expenses.py  main.py  purchase.py  users.py
db/: database.py  models.py  schemas.py
graph/: llm.py  test_graph.py  workflow.py
tool/: forecasting.py  purchase_tool.py
ui/: app.py
