[project]
name = "finance-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.7",
    "langgraph>=1.0.7",
    "matplotlib>=3.10.8",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.53.1",
    "uvicorn>=0.40.0",
]
